# streamlit_test

./: breast.py  data_app.py  hello.py  pyproject.toml  random_forest_model.pkl  student.py  student_2.py  student_logistic_regression_model.pkl  student_svm_model.pkl  svm_model.pkl
