[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["MariiaSam <kontragent@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
